----------------------------------------------------------------------
 OmegaT 1.7.3 update 4 Changes
----------------------------------------------------------------------

1.7.3 update 4 vs. 1.7.3 update 3


  1 Enhancement
  2 Bugfixes

----------------------------------------------------------------------
1.7.3 update 4

  Other enhancements:

  - Slovak localisation updated to 1.7.3 (UI, readme, instant start, documentation)

  Bug fixes:

  - PO Filter: some escapes not working
  http://sourceforge.net/support/tracker.php?aid=1964169
  
  - Angle bracket no showing in Editor after segment number in the German 
localization

----------------------------------------------------------------------
 OmegaT 1.7.3 update 3 Changes
----------------------------------------------------------------------

1.7.3 update 3 vs. 1.7.3 update 2


  2 Enhancements
  4 Bugfixes

----------------------------------------------------------------------
1.7.3 update 3

  Implemented requests:

  - DocBook: Allow to translate the language attribute
  http://sourceforge.net/support/tracker.php?aid=1949471     

  - Escape support for PO 
  http://sourceforge.net/support/tracker.php?aid=1869069    
  
  Bug fixes:

  - Wrong default encoding in XML (should be UTF-8) 
  http://sourceforge.net/support/tracker.php?aid=1941365   

  - Solaris not detected, and wrong default home directory 
  http://sourceforge.net/support/tracker.php?aid=1953251   

  - Error trying to create target document with large OOo file
  http://sourceforge.net/support/tracker.php?aid=1955635  

  - Windows: the OmegaT folder was not completely removed from Program files
when uninstalling the JRE version

----------------------------------------------------------------------
 OmegaT 1.7.3 update 2 Changes
----------------------------------------------------------------------

1.7.3 update 2 vs. 1.7.3 update 1


  4 Enhancements
  3 Bugfixes

----------------------------------------------------------------------