@@ -4,6 +4,7 @@
           glossaries, and translation leveraging into updated projects.
 
  Copyright (C) 2000-2006 Keith Godfrey and Maxym Mykhalchuk
+               2008 Alex Buloichik, Didier Briel
                Home page: http://www.omegat.org/omegat/omegat.html
                Support center: http://groups.yahoo.com/group/OmegaT/
 
@@ -27,18 +28,16 @@ package org.omegat.filters3.xml;
 import java.io.BufferedWriter;
 import java.io.File;
 import java.io.IOException;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Stack;
+
 import javax.xml.parsers.SAXParser;
-import org.xml.sax.Attributes;
-import org.xml.sax.InputSource;
-import org.xml.sax.SAXException;
-import org.xml.sax.SAXParseException;
-import org.xml.sax.ext.DeclHandler;
-import org.xml.sax.ext.LexicalHandler;
-import org.xml.sax.helpers.DefaultHandler;
 
 import org.omegat.filters2.TranslationException;
 import org.omegat.filters3.Attribute;
@@ -47,12 +46,21 @@ import org.omegat.filters3.Entry;
 import org.omegat.filters3.Tag;
 import org.omegat.util.OStrings;
 import org.omegat.util.StaticUtils;
+import org.xml.sax.Attributes;
+import org.xml.sax.InputSource;
+import org.xml.sax.SAXException;
+import org.xml.sax.SAXParseException;
+import org.xml.sax.ext.DeclHandler;
+import org.xml.sax.ext.LexicalHandler;
+import org.xml.sax.helpers.DefaultHandler;
 
 /**
  * The part of XML filter that actually does the job.
  * This class is called back by SAXParser.
  *
  * @author Maxym Mykhalchuk
+ * @author Alex Buloichik
+ * @author Didier Briel   
  */
 class Handler extends DefaultHandler implements LexicalHandler, DeclHandler
 {
@@ -165,8 +173,9 @@ class Handler extends DefaultHandler implements LexicalHandler, DeclHandler
             return null;
     }
     
-    /** Throws a nice error message when SAX parser encounders fastal error. */
-    private void reportFatalError(SAXParseException e) throws SAXException
+    /** Throws a nice error message when SAX parser encounters fatal error. */
+    private void reportFatalError(SAXParseException e) throws 
+                  SAXException, MalformedURLException, URISyntaxException
     {
         int linenum = e.getLineNumber();
         String filename;
@@ -209,64 +218,73 @@ class Handler extends DefaultHandler implements LexicalHandler, DeclHandler
     // Utility methods
     //////////////////////////////////////////////////////////////////////////
 
-    private String sourceFolder = null;
+    private String sourceFolderAbsolutePath = null;
     /** Returns source folder of the main file with trailing '/' (File.separator). */
-    private String getSourceFolder()
-    {
-        if (sourceFolder==null)
-        {
+    private String getSourceFolderAbsolutePath() {
+        if (sourceFolderAbsolutePath == null) {
             String res = inFile.getAbsoluteFile().getParent();
-            try
-            {
+            try {
                 res = inFile.getCanonicalFile().getParent();
-            } catch (IOException ex) { }
-            if (res.charAt(res.length()-1)!=File.separatorChar)
+            } catch (IOException ex) {
+            }
+            if (res.charAt(res.length() - 1) != File.separatorChar) {
                 res = res + File.separatorChar;
-            sourceFolder = res;
+            }
+            sourceFolderAbsolutePath = res;
         }
-        return sourceFolder;
+        return sourceFolderAbsolutePath;
     }
     
-    /** Converts System ID URL (starting from file:) into file name. */
-    private String systemId2fileName(String systemId)
+    /** Replace spaces by %20 */
+    private String replaceSpacesWithPercent20(String systemId)
     {
-        if (systemId.startsWith(START_FILESCHEMA))
+        if ( !(systemId.lastIndexOf(' ')<0) ) 
         {
-            // Unix: file:/home/smth
-            // Windows: file:///D:\home\smth
-            systemId = systemId.replace(File.separatorChar, '/');
-            systemId = systemId.substring(START_FILESCHEMA.length());
-            while (systemId.startsWith("/"))
-                systemId = systemId.substring(1);
-            
-            if (systemId.charAt(0)>='A' && systemId.charAt(0)<='Z' && systemId.charAt(1)==':')
-                systemId = systemId.replace('/', File.separatorChar); // Windows
-            else
-                systemId = '/' + systemId; // Unix
-        }
+                systemId = systemId.replaceAll("\\s", "%20");
+        }    
         return systemId;
     }
     
     /** Makes System ID not an absolute, but a relative one. */
-    private String localizeSystemId(String systemId)
+    private String localizeSystemId(String systemId) throws 
+                    URISyntaxException, MalformedURLException
     {
         if (systemId.startsWith(START_FILESCHEMA))
         {
-            systemId = systemId2fileName(systemId);
-            if (systemId.startsWith(getSourceFolder()))
-                systemId = systemId.substring(getSourceFolder().length());
+//            File thisOutFile=new File(new URL(systemId).toURI());
+//          The lines below are doing the same thing as the 2.0
+//          commented line above          
+            // replaceSpacesWithPercent20 is needed only when running under Java 1.4
+            systemId = replaceSpacesWithPercent20(systemId);
+            URL urlSystemID = new URL(systemId);
+            URI uriSystemID = new URI(urlSystemID.toString());
+            File thisOutFile=new File(uriSystemID);
+            String thisOutPath=thisOutFile.getAbsolutePath();
+            
+            if (thisOutPath.startsWith(getSourceFolderAbsolutePath())) {
+                return thisOutPath.substring(getSourceFolderAbsolutePath().length());
+            }
         }
         return systemId;
     }
     
     /** Whether the file with given systemId is in source folder. */
-    private boolean isInSource(String systemId)
+    private boolean isInSource(String systemId) throws 
+                      URISyntaxException, MalformedURLException
     {
         if (systemId.startsWith(START_FILESCHEMA))
         {
-            systemId = systemId2fileName(systemId);
-            if (systemId.startsWith(getSourceFolder()))
+//            File thisOutFile=new File(new URL(systemId).toURI());
+//          The lines below are doing the same thing as the 2.0
+//          commented line above            
+            // replaceSpacesWithPercent20 is needed only when running under Java 1.4
+            systemId = replaceSpacesWithPercent20(systemId);  
+            URL urlSystemID = new URL(systemId);
+            URI uriSystemID = new URI(urlSystemID.toString());
+            File thisOutFile=new File(uriSystemID);
+            if (thisOutFile.getAbsolutePath().startsWith(getSourceFolderAbsolutePath())) {
                 return true;
+            }
         }
         return false;
     }
@@ -308,7 +326,8 @@ class Handler extends DefaultHandler implements LexicalHandler, DeclHandler
      * we created a writer for, and if so,
      * closes the writer and nulls the entity.
      */
-    private void doEndEntity(String name) throws SAXException, TranslationException, IOException
+    private void doEndEntity(String name) throws 
+                  SAXException, TranslationException, IOException
     {
         if (inDTD || extEntity==null)
             return;
@@ -323,7 +342,8 @@ class Handler extends DefaultHandler implements LexicalHandler, DeclHandler
     }
 
     /** Resolves external entity and creates a new writer if it's an included file. */
-    public InputSource doResolve(String publicId, String systemId) throws SAXException, TranslationException, IOException
+    public InputSource doResolve(String publicId, String systemId) throws 
+             SAXException, TranslationException, IOException, URISyntaxException
     {
         if (dtd!=null && 
                 StaticUtils.equal(publicId, dtd.getPublicId()) && 
@@ -338,10 +358,12 @@ class Handler extends DefaultHandler implements LexicalHandler, DeclHandler
                  systemId.startsWith(START_FILESCHEMA)) )
         {
             InputSource entity = new InputSource(systemId);
-            // checking if f
+            // checking if file
             if (systemId.startsWith(START_FILESCHEMA))
             {
-                if (!new File(systemId2fileName(systemId)).exists())
+               // replaceSpacesWithPercent20 is needed only when running under Java 1.4
+                systemId = replaceSpacesWithPercent20(systemId);    
+                if (!new File(new URI(systemId)).exists())
                     entity = null;
             }
             
@@ -460,7 +482,8 @@ class Handler extends DefaultHandler implements LexicalHandler, DeclHandler
     }
     
     /** Is called when the tag is started. */
-    private void start(String tag, Attributes attributes) throws SAXException, TranslationException
+    private void start(String tag, Attributes attributes) throws 
+                  SAXException, TranslationException
     {
         if (isOutOfTurnTag(tag))
         {
@@ -604,6 +627,10 @@ class Handler extends DefaultHandler implements LexicalHandler, DeclHandler
         {
             return doResolve(publicId, systemId);
         }
+        catch (URISyntaxException e)
+        {
+            throw new SAXException(e);
+        }
         catch (IOException e)
         {
             throw new SAXException(e);
@@ -707,7 +734,13 @@ class Handler extends DefaultHandler implements LexicalHandler, DeclHandler
      */
     public void fatalError(org.xml.sax.SAXParseException e) throws SAXException 
     {
-        reportFatalError(e);
+        try {
+            reportFatalError(e);
+        } catch (MalformedURLException ex) {
+            throw new SAXException(ex);
+        } catch (URISyntaxException ex) {
+            throw new SAXException(ex);
+        }
     }
 
     /**
@@ -792,10 +825,17 @@ class Handler extends DefaultHandler implements LexicalHandler, DeclHandler
     {
         if (inDTD)
             return;
-        Entity entity = new Entity(name, publicId, localizeSystemId(systemId));
-        if (isInSource(systemId))
-            externalEntities.add(entity);
-        dtd.addEntity(entity);
+        try {
+            Entity entity = new Entity(name, publicId,
+                    localizeSystemId(systemId));
+            if (isInSource(systemId))
+                externalEntities.add(entity);
+            dtd.addEntity(entity);
+        } catch (MalformedURLException ex) {
+            throw new SAXException(ex);
+        } catch (URISyntaxException ex) {
+            throw new SAXException(ex);
+        }
     }
 
     ///////////////////////////////////////////////////////////////////////////
