@@ -6,7 +6,7 @@
 
 
   1 Enhancement
-  2 Bugfixes
+  3 Bugfixes
 
 ----------------------------------------------------------------------
 1.7.3 update 4
@@ -22,6 +22,10 @@
   
   - Angle bracket no showing in Editor after segment number in the German 
 localization
+
+  - DocBook: entities resolved only under Java 1.4
+  http://sourceforge.net/support/tracker.php?aid=1825174 
+
 
 ----------------------------------------------------------------------
  OmegaT 1.7.3 update 3 Changes
